--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -41,4 +41,4 @@ html, body {
   padding: 0;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family:none; }
