--- a/UI/src/core/pages/homepage/homepage.scss
+++ b/UI/src/core/pages/homepage/homepage.scss
@@ -17,11 +17,6 @@
         padding: 1em;
         background-color: #DFE
     }   
-    &-dialog{
-        &-inner{}
-        &-image{}
-        &-tool{}
-    }
 }
 
 .info{
@@ -156,6 +151,15 @@
         white-space: nowrap;
         text-align: center;
     }
+}
+.reader-dialog{
+    &-inner{
+        height: 580px;
+    }
+    &-image{
+        height: 580px;
+    }
+    &-tool{}
 }
 
 
