--- a/UI/src/core/pages/homepage/homepage.scss
+++ b/UI/src/core/pages/homepage/homepage.scss
@@ -155,11 +155,9 @@
 .reader-dialog{
     &-inner{
         height: 580px;
+        background-color: #333;
     }
-    &-image{
-        height: 580px;
-    }
-    &-tool{}
+    
 }
 
 
