--- a/UI/src/core/components/ui-viewer/ui-viewer.scss
+++ b/UI/src/core/components/ui-viewer/ui-viewer.scss
@@ -1,4 +1,4 @@
-.ui-swiper{
+.ui-viewer{
     position: relative;
     width: 100%;
     height: 100%;
@@ -62,7 +62,7 @@
     }
     &-filmstrip {
         height: 80px;
-        background: rgba(255,255,255,0.8);
+        background-color: #333;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -76,6 +76,9 @@
             padding: 0 1em;
         }
     } 
+    &-thumbframe {
+        position: relative;
+    }
     &-thumb {
         width: 60px;
         height: 60px;
@@ -87,14 +90,35 @@
         &.active {
             border: 2px solid #409eff;
         }
+        &-index{
+            pointer-events: none;
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            font-size: 22px;
+            line-height: 20px;
+            text-align: center;
+            padding: 20px;
+            top: 0;
+            left: 0;
+            background-color: #7772;
+            color: #fff;
+            z-index: 2;
+
+        }
     }
     &-tools{
         position: absolute;
-        width: 100%;
-        margin: auto;
+        left: 50%;
+        transform: translateX(-50%);
         display: flex;
         justify-content:center;
         bottom: 1rem;
         z-index: 2;
+        border-radius: 4px;
+        background-color: #3338;
+    }
+    &-icon{
+        color: #DDD;
     }
 }
