--- a/UI/src/app/app.html
+++ b/UI/src/app/app.html
@@ -1,3 +1,20 @@
 <div class="app-main">
-  <router-outlet></router-outlet>
+  <div class="app-main-side">
+    <div>
+       <ui-button modeType="text" routerLink="">
+          homepage
+        </ui-button>
+    </div>
+      <div>
+        ????
+      </div>
+      <div>
+        <ui-button modeType="text" routerLink="/settings">
+          settings
+        </ui-button>
+      </div>
+  </div>
+  <div class="app-main-content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
