--- a/UI/src/core/components/ui-dialog/ui-dialog.html
+++ b/UI/src/core/components/ui-dialog/ui-dialog.html
@@ -1,8 +1,8 @@
 <div class="dialog-backdrop">
   <div 
     class="dialog"
-    [style.width.px]="dialogWidth"
-    [style.height.px]="dialogHeight"
+    [style.width]="dialogWidth"
+    [style.height]="dialogHeight"
     >
     <div 
       class="dialog-header"
