--- a/UI/src/core/components/ui-dialog/ui-dialog.scss
+++ b/UI/src/core/components/ui-dialog/ui-dialog.scss
@@ -11,7 +11,6 @@
   background: #fff;
   border-radius: 8px;
   min-width: 320px;
-  max-width: 90vw;
   box-shadow: 0 4px 24px rgba(0,0,0,0.18);
   overflow: hidden;
 }
@@ -35,7 +34,7 @@
 }
 .dialog-body {
   padding: 1em;
-  height: 100%;
+  height: calc(100% - 40px);
 }
 
 .dialog-footer {
