--- a/UI/src/core/components/ui-viewer/ui-viewer.scss
+++ b/UI/src/core/components/ui-viewer/ui-viewer.scss
@@ -1,7 +1,7 @@
 .ui-viewer{
     position: relative;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 80px);
     margin: auto;
     user-select: none;
     overflow: hidden;
@@ -67,13 +67,22 @@
         align-items: center;
         justify-content: center;
         z-index: 5;
-        padding: 0.5em 0;
-        box-sizing: border-box;
+        padding-top: 1em;
+        overflow: hidden;
+        position: relative;
         &-inner{
             display: flex;
             overflow-x: auto;
+            overflow-y: hidden;
             gap: 8px;
             padding: 0 1em;
+            cursor: grab;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+            user-select: none;
+            &::-webkit-scrollbar { 
+                display: none; 
+            }
         }
     } 
     &-thumbframe {
@@ -82,6 +91,7 @@
     &-thumb {
         width: 60px;
         height: 60px;
+        aspect-ratio: 1/1;
         object-fit: cover;
         border-radius: 4px;
         border: 2px solid transparent;
@@ -95,16 +105,15 @@
             position: absolute;
             width: 60px;
             height: 60px;
-            font-size: 22px;
-            line-height: 20px;
-            text-align: center;
-            padding: 20px;
+            font-size: 20px;
             top: 0;
             left: 0;
             background-color: #7772;
             color: #fff;
             z-index: 2;
-
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
     &-tools{
