--- a/UI/src/core/pages/homepage/homepage.scss
+++ b/UI/src/core/pages/homepage/homepage.scss
@@ -11,7 +11,12 @@
         width: 27.5%;
         padding: 1em;
         background-color: #DFE
-    }   
+    }  
+    &-content{
+        display: flex;
+        gap: 1em;
+        flex-wrap: wrap;
+    } 
 }
 
 .info{
