--- a/UI/src/app/app.html
+++ b/UI/src/app/app.html
@@ -1,5 +1,5 @@
 <div class="app-main">
-  <div class="app-main-side">
+  <!-- <div class="app-main-side">
     <div>
        <ui-button modeType="text" routerLink="">
           homepage
@@ -13,8 +13,8 @@
           settings
         </ui-button>
       </div>
-  </div>
-  <div class="app-main-content">
+  </div>-->
+  <div class="app-main-content"> 
     <router-outlet></router-outlet>
   </div>
 </div>
