--- a/UI/src/core/components/ui-textarea/ui-textarea.scss
+++ b/UI/src/core/components/ui-textarea/ui-textarea.scss
@@ -7,6 +7,7 @@
         border-radius: 4px; 
         font-size: 1.2em;
         overflow: hidden;
+        height: auto;
     }
     .noDrop{
         resize: none;
