--- a/UI/src/core/pages/homepage/homepage.scss
+++ b/UI/src/core/pages/homepage/homepage.scss
@@ -37,6 +37,12 @@
         &-btngroup{
             display: flex;
             gap: 0.5em;
+            &-left{
+                display: flex;
+                align-items: center;
+                background-color: #EEE;
+                z-index: 20;
+            }
         }
         &-btn{
             width: fit-content;
@@ -45,6 +51,20 @@
         &-search{
             display: flex;
             gap: 0.5em;
+        }
+        &-sort{
+            display: flex;
+            align-items: center;
+            opacity: 0;
+            transform: translateX(-100%);
+            transition: all 0.3s linear;
+            pointer-events: none;
+            z-index: 1;
+            &-active{
+                opacity: 1;
+                transform: translateX(0);
+                pointer-events: all;
+            }
         }
     }
     
@@ -237,6 +257,11 @@
     &-btn{
         width: fit-content;
     }
+}
+.single-img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 
